<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="please_login_or_register_to_start_your_journey">Please login or register to start your journey</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="new_here_create_a_new_account">Create a new account</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile number</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="search_here">Search here</string>
    <string name="hello">Hello!</string>
    <string name="shubham">Shubham</string>
</resources>